welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:7: error: not found: type !=
if (litMessage(): String!=A) {
                        ^