welcome.lessons.welcome.bdr.BDR.scala.code
var A=1
var B=2 
var L=3
var R=4
var X=5
var Z=6
if (litMessage(): String!=A) {
	avance();
}
